# use-cases

./: .gitignore  CLAUDE.md  README.md  RUBRIC.md
async-agents/: README.md  dw.toml  pyproject.toml
async-agents/src/: __init__.py  agent.py  batch.py  cli.py  prompts.py  search.py  tools.py
async-agents/src/tools/: __init__.py  scrape.py  search.py
async-agents/src/utils/: agent.py  batch.py
async-evals/: .env.example  .gitignore  README.md  arize-ax.md  arize-phoenix.md  compose.phoenix-only.yaml  docker-compose.yaml  dw.toml  eval.py  pyproject.toml
async-evals/src/: cli.py  config.py  data.py  judge.py  phoenix_io.py
async-evals/tests/: conftest.py  test_judge.py
async-evals/truth-evaluations/: README.md  pyproject.toml
bug-detection-ensemble/: INSTRUCTIONS.md  README.md  dw.toml  pyproject.toml  report.md
bug-detection-ensemble/src/: __init__.py  analysis.py  batch.py  classify.py  cli.py  datasets.py  ensemble.py  juliet.py  preprocess.py  prompts.py  samples.py
data-generation/: INSTRUCTIONS.md
data-labelling/: INSTRUCTIONS.md
data-processing-pipelines/: README.md  dw.toml  pyproject.toml
data-processing-pipelines/src/: __init__.py  batch.py  cli.py  pipeline.py  prompts.py
dataset-compilation/: INSTRUCTIONS.md  README.md  dw.toml  pyproject.toml  report.md
dataset-compilation/src/: __init__.py  batch.py  cli.py  scrape.py  search.py
embeddings/: README.md  dw.toml  pyproject.toml
embeddings/src/: __init__.py  batch.py  cli.py  data.py  index.py
ensemble-classification/: INSTRUCTIONS.md
image-summarisation/: README.md  pyproject.toml
image-summarisation/src/: cli.py
image-summarization/: .gitignore  README.md  dw.toml  pyproject.toml
image-summarization/src/: __init__.py  batch.py  cli.py
mmlu-evals/: README.md  main.py  pyproject.toml
mmlu-evals/src/: __init__.py  batch.py  cli.py  evals.py
model-evals/: INSTRUCTIONS.md  README.md  dw.toml  main.py  pyproject.toml  report.md  results.jsonl
model-evals/src/: __init__.py  batch.py  cli.py  evals.py
structured-extraction/: INSTRUCTIONS.md  README.md  dw.toml  pyproject.toml  report.md
structured-extraction/src/: __init__.py  batch.py  cli.py  data.py  schema.py  sroie.py  voting.py
synthetic-data-generation/: README.md  dw.toml  pyproject.toml
synthetic-data-generation/src/: __init__.py  batch.py  cli.py  generator.py  prompts.py
synthetic-user-testing/: INSTRUCTIONS.md
truth-evaluations/: README.md  pyproject.toml
truth-evaluations/src/: __init__.py
truth-evaluations/tests/: test_data.py
