[project]
name = "doubleword-arize"
version = "0.1.0"
description = "Run a heavy LLM-as-judge eval workload on Doubleword's batch tier and visualise it (cost + per-example scores) in Arize Phoenix."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.50.0",
    "autobatcher>=0.1.0",
    "datasets>=2.19",
    "click>=8.1",
    "tqdm>=4.66",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    # Pinned >=16.4.0 to keep transitive strawberry-graphql at or above
    # the patched floor of 0.315.4 (GHSA: GraphiQL may expose HTTP
    # headers in URLs). arize-phoenix 16.3.0 exact-pins
    # strawberry-graphql to a vulnerable version, so the only path to a
    # patched transitive is bumping arize-phoenix itself; 16.4.0 is the
    # first 16.x to satisfy the security floor. Held <17 to avoid the
    # major bump released same-day as the security alert.
    "arize-phoenix>=16.4.0,<17",
    "pandas>=2.2",
    "python-dotenv>=1.0.1",
    "wasabi>=1.1.3",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
]

[project.scripts]
doubleword-arize = "src.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
# Universal lockfile covering Linux, macOS, and Windows so `uv sync`
# resolves on any platform without regenerating.
environments = [
    "python_version >= '3.11' and sys_platform == 'linux'",
    "python_version >= '3.11' and sys_platform == 'darwin'",
    "python_version >= '3.11' and sys_platform == 'win32'",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: hits the real Doubleword API. Skipped unless RUN_INTEGRATION=1.",
]

[tool.ruff]
line-length = 100
target-version = "py311"
