[project]
name = "bug-detection-ensemble"
version = "0.1.0"
description = "Bug detection ensemble - ask 'is there a bug?' 20 different ways"
readme = "INSTRUCTIONS.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "openai>=1.0",
    "requests>=2.28",
]

[project.scripts]
bug-ensemble = "src.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
