[project]
name = "dataset-compilation"
version = "0.1.0"
description = "Compile exhaustive datasets using LLM + search"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "openai>=1.0.0",
    "requests>=2.31.0",
    "tqdm>=4.66.0",
]

[project.scripts]
dataset-compilation = "src.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
