[project]
name = "structured-extraction"
version = "0.1.0"
description = "Extract structured data from documents using ensemble voting"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "openai>=1.0.0",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "tqdm>=4.66.0",
    "pandas>=2.0.0",
]

[project.scripts]
structured-extraction = "src.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
